fix(styles): adjust z-index for text element to fix text selection issue

--- a/packages/react-editor/src/styles.css
+++ b/packages/react-editor/src/styles.css
@@ -325,7 +325,7 @@
           @apply courier-relative courier-z-20;
 
           &::before {
-            @apply courier-left-[-12px] courier-right-[-12px] courier-top-0 courier-bottom-0 courier-rounded-md courier-border courier-border-[#0085FF] courier-absolute courier-content-[''] courier-z-10;
+            @apply courier-left-[-12px] courier-right-[-12px] courier-top-0 courier-bottom-0 courier-rounded-md courier-border courier-border-[#0085FF] courier-absolute courier-content-[''] -courier-z-10;
           }
         }
 
